<resources>
    <string name="app_name">去问直播</string>

    <!-- 通用的 -->
    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_mail_input_hint">输入邮箱</string>
    <string name="common_mail_input_error">邮箱输入不正确</string>

    <string name="common_phone_and_email_input_hint">请输入手机号/邮箱</string>
    <string name="common_phone_and_email_input_error">手机号/邮箱输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>

    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>

    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>

    <string name="common_loading">加载中&#8230;</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>

    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>

    <string name="common_network">当前没有网络连接，请检查网络设置</string>

    <!-- 网络请求 -->
    <string name="http_loading">加载中&#8230;</string>

    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_account_error">账号异常，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>

    <!-- 提示布局 -->
    <string name="hint_layout_no_data">空空如也</string>
    <string name="hint_layout_error_request">请求出错，点击重试</string>
    <string name="hint_layout_error_network">网络错误，点击重试</string>

    <!-- 地区对话框 -->
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>

    <!-- 日期对话框 -->
    <string name="date_title">请选择日期</string>

    <!-- 时间对话框 -->
    <string name="time_title">请选择时间</string>

    <!-- 升级对话框 -->
    <string name="update_title">发现新版本</string>

    <string name="update_content">更新内容</string>

    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>

    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>

    <string name="update_status_start">正在下载</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>
    <string name="update_status_failed">下载失败，点击重试</string>

    <string name="update_no_update">当前已是最新版本</string>

    <!-- 分享对话框 -->
    <string name="share_title">分享到&#8230;</string>

    <string name="share_platform_wechat">微信</string>
    <string name="share_platform_moment">朋友圈</string>
    <string name="share_platform_qq">QQ</string>
    <string name="share_platform_qzone">QQ空间</string>
    <string name="share_platform_link">复制链接</string>

    <string name="share_platform_copy_hint">已复制到剪贴板</string>

    <!-- 支付密码对话框 -->
    <string name="pay_title">请输入支付密码</string>

    <!-- 选择对话框 -->
    <string name="select_min_hint">至少要选择 %d 项</string>
    <string name="select_max_hint">最多只能选择 %d 项</string>

    <!-- 身份校验对话框 -->
    <string name="safe_title">身份校验</string>

    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_found">发现</string>
    <string name="home_nav_message">消息</string>
    <string name="home_nav_me">我的</string>
    <string name="home_nav_ask">去问</string>
    <string name="home_nav_live">直播</string>

    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>

    <string name="login_other">- 其他方式 -</string>

    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_password_hint1">请输入6–18位，数字、字母和特殊符号的密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_password_hint3">请输入密码</string>
    <string name="register_password_hint4">确认密码</string>
    <string name="register_succeed">注册成功</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>

    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>
    <string name="setting_update">检查更新</string>

    <string name="setting_password">修改密码</string>
    <string name="setting_phone">修改手机</string>

    <string name="setting_auto">自动登录</string>
    <string name="setting_cache">清空缓存</string>

    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>

    <string name="setting_exit">退出登录</string>

    <!-- 关于 -->
    <string name="about_title">关于我们</string>
    <string name="about_author"><font color="#85b84f">Android</font> 轮子哥</string>

    <string name="about_copyright">Copyright © 2018 &#8211; 2020</string>

    <!-- 忘记密码 -->
    <string name="password_forget_title">忘记密码</string>
    <string name="password_forget_tip">通过注册手机/邮箱找回</string>

    <!-- 重置密码 -->
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_phone_hint1">设置6&#8211;18位登录密码</string>
    <string name="password_reset_phone_hint2">重新输入一次密码</string>
    <string name="password_reset_input_error">两次密码输入不一致，请重新输入</string>
    <string name="password_reset_success">密码重置成功</string>

    <!-- 修改手机号 -->
    <string name="phone_reset_title">设置手机号</string>
    <string name="phone_reset_change_hint">下次登录请使用更换后的新手机号登录</string>
    <string name="phone_reset_commit">立即绑定</string>

    <string name="phone_reset_commit_succeed">绑定成功，下次登录请使用新手机号登录</string>

    <!-- 个人资料 -->
    <string name="personal_data_title">个人资料</string>
    <string name="personal_data_head">头像</string>

    <string name="personal_data_id">用户ID</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">设置昵称</string>

    <string name="personal_data_address">地区</string>
    <string name="personal_data_address_hint">请选择</string>

    <string name="personal_data_phone">手机号码</string>
    <string name="personal_data_phone_hint">立即绑定</string>

    <!-- 浏览器 -->
    <string name="web_title">网页加载中&#8230;</string>

    <!-- 图片选择 -->
    <string name="image_select_title">图片选择</string>
    <string name="image_select_all">所有图片</string>

    <string name="image_select_total">共 %d 张</string>

    <string name="image_select_max_hint">本次最多只能选择 %d 张图片</string>

    <!-- 视频选择 -->
    <string name="video_select_title">视频选择</string>
    <string name="video_select_all">所有视频</string>

    <string name="video_select_total">共 %d 个</string>

    <string name="video_select_max_hint">本次最多只能选择 %d 个视频</string>

    <!-- 拍照 -->
    <string name="camera_launch_fail">无法启动相机</string>
    <string name="camera_image_error">目标地址错误</string>

    <string name="login_welcome_tip">您好，\n欢迎来到去问</string>
    <string name="login_protocol_str1">登录/注册即代表同意</string>
    <string name="login_protocol_and">和</string>
    <string name="login_protocol_user_1">《用户服务协议》</string>
    <string name="login_protocol_user_2">《隐私政策》</string>
    <string name="register_account_tip">注册账号</string>
    <string name="register_method_tip">通过注册手机/邮箱注册</string>
    <string name="register_switch_mailbox">切换邮箱</string>
    <string name="register_switch_phone">切换手机号</string>
    <string name="home_please_enter_verification_code">请输入验证码</string>

    <string name="home_go_ask_the_video">去问视频</string>
    <string name="home_live_recommendation">直播推荐</string>
    <string name="home_see_more">查看更多</string>
    <string name="home_notice">公告</string>
    <string name="home_release">发布</string>
    <string name="home_quwen">去问</string>
    <string name="home_constellation_query">星座查询</string>
    <string name="home_please_provide_this_information">请您提供这些信息</string>
    <string name="home_date_of_birth">出生日期</string>
    <string name="home_please_select_a_date">请选择一个日期</string>
    <string name="home_today_s_fortune">今日运势</string>
    <string name="home_go_ask_for_details">去问详情</string>
    <string name="home_get_it_right_now">立即领取</string>
    <string name="home_please_enter_the_title_to_be_published">请输入需要发布的标题</string>
    <string name="home_please_enter_what_needs_to_be_published">请输入需要发布的内容</string>
    <string name="home_please_select_the_picture_to_be_published">请选择需要发布的图片</string>
    <string name="home_follow">关注</string>
    <string name="home_fans">粉丝</string>
    <string name="home_career_experience_x">职业经历：</string>
    <string name="home_comment_x">评论(20)</string>
    <string name="home_live_studio">直播间</string>
    <string name="home_live_stream_level">直播等级</string>
    <string name="home_live_experience">经验值</string>
    <string name="home_live_start_time">开播时间</string>
    <string name="home_live_wheat_price">连麦价格</string>
    <string name="home_ask_him_a_question">向他提问</string>
    <string name="home_appointment_host">预约主播</string>
    <string name="home_constellation_calculation">星座计算中,请稍后</string>


    <string name="context">感谢您对主播和去问平台的信任!兼听则明,偏听则暗,一个微小的建议,一句普通的话语,都可能改变我们的一生。但是,我们在此不得不提醒您,任何个人的建议或推测均源于经验或直觉,不属于科学范畴,不可能100%准确,也不可能让您100%满意,故主播和測測平台均不对任何建议或推測提供承诺或担保。 主播的所有言论和服务,均属于其个人言论,并不代表测测平台的意见和立场。若主播违规,您可以向管理员进行举报和投诉。如果用户出现谩骂行为,涉及黃赌毒话题,涉及封建迷信或邪教,勒索和诽谤主播,或者与主播发生咨询聊天之外的任何关系,测测可以做出相应的处罚措施,并不会退款,请您慎重</string>

    <string name="extension_name">请输入姓名</string>
    <string name="extension_phone">请输入电话号码</string>
    <string name="extension_positive">请选择身份证正面</string>
    <string name="extension_verso">请选择身份证反面</string>
    <string name="extension_code">请输入身份证号</string>
</resources>