<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_home_selector"
        android:title="@string/home_nav_index" />

    <item
        android:id="@+id/home_ask"
        android:icon="@drawable/home_found_selector"
        android:title="@string/home_nav_ask" />

    <item
        android:id="@+id/home_live"
        android:icon="@drawable/home_found_selector"
        android:title="@string/home_nav_live" />

    <item
        android:id="@+id/home_message"
        android:icon="@drawable/home_message_selector"
        android:title="@string/home_nav_message" />

    <item
        android:id="@+id/home_me"
        android:icon="@drawable/home_me_selector"
        android:title="@string/home_nav_me" />
</menu>