<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layoutAnimation="@anim/fall_down_layout"
            android:orientation="vertical"
            android:paddingHorizontal="36dp"
            tools:layoutAnimation="@null">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/password_forget_title"
                android:textColor="@color/textColor"
                android:textSize="28sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_forget_tip"
                android:textColor="@color/color999"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_type_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.hjq.widget.view.RegexEditText
                    android:id="@+id/et_register_phone"
                    style="@style/EditTextStyleRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/common_phone_input_hint"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:regexType="mobile" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cv_register_switch_mail"
                    style="@style/SwitchMailboxViewStyle"
                    android:text="@string/register_switch_mailbox" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_type_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <com.hjq.widget.view.RegexEditText
                    android:id="@+id/et_register_mail"
                    style="@style/EditTextStyleRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/common_mail_input_hint"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"
                    android:maxLength="@integer/email_length"
                    android:singleLine="true"
                    app:regexType="email" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cv_register_switch_phone"
                    style="@style/SwitchMailboxViewStyle"
                    android:text="@string/register_switch_phone" />
            </LinearLayout>

            <View
                style="@style/HorizontalLineStyle"
                android:layout_gravity="bottom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_register_code"
                    style="@style/EditTextStyleRegister"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/common_code_input_hint"
                    android:inputType="number"
                    android:maxLength="@integer/sms_code_length"
                    android:singleLine="true" />

                <com.hjq.widget.view.CountdownView
                    android:id="@+id/cv_register_countdown"
                    style="@style/CountdownViewStyle" />
            </LinearLayout>

            <View
                style="@style/HorizontalLineStyle"
                android:layout_gravity="bottom" />

            <com.hjq.widget.view.PasswordEditText
                android:id="@+id/et_register_password1"
                style="@style/EditTextStyleRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/register_password_hint3"
                android:maxLength="@integer/password_length"
                android:maxLines="1" />

            <View style="@style/HorizontalLineStyle" />

            <com.hjq.widget.view.PasswordEditText
                android:id="@+id/et_register_password2"
                style="@style/EditTextStyleRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/register_password_hint4"
                android:maxLines="1"/>

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_commit"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/common_confirm" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>