<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:srcCompat="@drawable/tag_work" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/home_career_experience_x"
                android:textColor="@color/homeColor2f2f2f"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="擅长八字，梅花，奇门，风水等本人15年从易经验"
            android:textColor="@color/homeColor5f5f5f"
            android:textSize="14sp" />


        <LinearLayout
            android:id="@+id/ll_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:srcCompat="@drawable/tag_comment" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_comment_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/home_comment_x"
                android:textColor="@color/homeColor2f2f2f"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="我要评论"
                android:textColor="@color/homeColor5f5f5f"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:srcCompat="@drawable/arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:srcCompat="@drawable/tag_live" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/home_live_studio"
                android:textColor="@color/homeColor2f2f2f"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="56dp"
                android:text="@string/home_live_stream_level"
                android:textColor="@color/homeColor5f5f5f"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/button_selector_shape_30"
                android:gravity="center"
                android:paddingHorizontal="6dp"
                android:paddingVertical="1dp"
                android:text="LV5"
                android:textColor="@color/white"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="56dp"
                android:text="@string/home_live_experience"
                android:textColor="@color/homeColor5f5f5f"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="1623667"
                android:textColor="@color/homeColor212121"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="56dp"
                android:text="@string/home_live_start_time"
                android:textColor="@color/homeColor5f5f5f"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="不定时"
                android:textColor="@color/homeColor212121"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="56dp"
                android:text="@string/home_live_wheat_price"
                android:textColor="@color/homeColor5f5f5f"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="￥10.8/分钟"
                android:textColor="@color/homeColor212121"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="56dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="注：连麦消耗主要用于维护平台直播业务成本"
                android:textColor="@color/homeColor212121"
                android:textSize="10sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="40dp"
            android:text="@string/home_ask_him_a_question" />


        <androidx.appcompat.widget.AppCompatButton
            style="@style/BorderButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_appointment_host" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>
</layout>