<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:srcCompat="@drawable/home_notice" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/homeNoticeBgColor"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/home_notice"
            android:textColor="@color/colorAccent"
            android:textSize="11sp" />

        <com.hsjskj.quwen.widget.MarqueeView
            android:id="@+id/marqueeView"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:mvAnimDuration="500"
            app:mvInterval="2000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_quwen"
            android:textColor="@color/homeColor1a1a1a"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector_shape_30"
            android:drawableStart="@drawable/home_release"
            android:drawablePadding="6dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/home_release"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>